2010-12-14  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Eric Seidel.

        [Qt] [Symbian] Do not use pkg-config on Symbian as it is not supported
        https://bugs.webkit.org/show_bug.cgi?id=50231

        Guard CONFIG+=link_pkgconfig with !symbian.

        * jsc.pro:

2010-12-14  Cameron Zwarich  <zwarich@apple.com>

        Not reviewed.

        Revert accidental change disabling the JIT for most platforms.

        * wtf/Platform.h:

2010-12-13  Cameron Zwarich  <zwarich@apple.com>

        Reviewed by Eric Seidel.

        Clang fails to build the JSC interpreter
        https://bugs.webkit.org/show_bug.cgi?id=51016

        Clang does not allow indirect gotos out of scopes with cleanup. GCC 4.2 allows
        them, but it does not correctly generate the cleanup, causing a leak if the
        cleanup decrements a reference count.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute): Put an Identifier into its own scope.

2010-12-14  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Simplify context-menu handling code
        https://bugs.webkit.org/show_bug.cgi?id=49658

        * wtf/PlatformRefPtr.h: Add leakRef()

2010-12-13  Cameron Zwarich  <zwarich@apple.com>

        Reviewed by Gavin Barraclough.

        JavaScriptCore should not use "asm volatile" outside of a function
        https://bugs.webkit.org/show_bug.cgi?id=50991

        * jit/JITStubs.cpp: Remove the volatile keyword from asm statements.

2010-12-13  Steve Falkenburg  <sfalken@apple.com>

        Windows production build fix.
        Try copying ICU 4.6 in addition to 4.4 and 4.2.

        * JavaScriptCore.vcproj/jsc/jscPostBuild.cmd:

2010-12-13  Michael Saboff  <msaboff@apple.com>

        Reviewed by Oliver Hunt.

        REGRESSION: mobileme mail viewing is broken
        https://bugs.webkit.org/show_bug.cgi?id=50884
