@@ -1,3 +1,15 @@
+2010-12-14  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        <http://webkit.org/b/51064> Reproducible crash inside WebCore::MediaPlayerPrivateQTKit::createQTMovie when loading <video>
+
+        We were crashing inside MediaPlayerPrivateQTKit::createQTMovie as we were passing a null URL in
+        to CFNetworkCopyProxiesForURL. This happened because we were null-checking the URL incorrectly.
+
+        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
+        (WebCore::MediaPlayerPrivateQTKit::resumeLoad): Explicitly test for a null string.
+
 2010-12-14  David Hyatt  <hyatt@apple.com>
 
         Reviewed by Dan Bernstein.
